<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/wineRed"
    tools:context=".Activities.MainActivity">

    <FrameLayout
        android:id="@+id/main_header_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="40dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="45sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:gravity="center"/>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/start_panel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/main_header_panel"
        app:layout_constraintBottom_toTopOf="@id/footer_panel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/enter_name"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            />
        <EditText
            android:id="@+id/name_input"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center"
            android:text="@string/name_input"
            android:textColor="@color/white"
            android:background="@drawable/input_name_border"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"/>

        <LinearLayout
            android:id="@+id/player_two_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/enter_name_two"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                />

            <EditText
                android:id="@+id/name_input_two"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center"
                android:text="@string/name_input_two"
                android:textColor="@color/white"
                android:background="@drawable/input_name_border"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/difficulty_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Difficulty:"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:visibility="visible">

                <TextView
                    android:id="@+id/difficulty_easy"
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    android:text="@string/easy_button"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:layout_margin="20dp"
                    android:background="@drawable/difficulty_button_border_active"/>

                <TextView
                    android:id="@+id/difficulty_medium"
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    android:text="@string/medium_button"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:layout_margin="20dp"
                    android:background="@drawable/difficulty_button_border_inactive"/>

                <TextView
                    android:id="@+id/difficulty_hard"
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    android:text="@string/hard_button"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:layout_margin="20dp"
                    android:background="@drawable/difficulty_button_border_inactive"/>
            </LinearLayout>
        </LinearLayout>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/material_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Zwei Spieler  "
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        
        <TextView
            android:id="@+id/start_button"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:text="@string/start_button"
            android:textStyle="bold"
            android:textSize="32sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_marginTop="40dp"
            android:background="@drawable/start_button_border"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/footer_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/start_panel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <ImageButton
            android:id="@+id/info_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/info_button"
            android:src="@drawable/icon_question_mark"
            android:background="@android:color/transparent"
            />

    </LinearLayout>







</androidx.constraintlayout.widget.ConstraintLayout>